--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^1.0.2-beta.28",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -33,6 +35,7 @@
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-element-plus": "0.0.13"
   }
 }
