--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "composition-api": "0.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^1.0.2-beta.28",
     "register-service-worker": "^1.7.2",
@@ -35,7 +36,7 @@
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5",
+    "typescript": "^4.3.5",
     "vue-cli-plugin-element-plus": "0.0.13"
   }
 }
