--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "composition-api": "0.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^1.0.2-beta.28",
+    "json5": "^2.2.1", 
+    "mockjs": "^1.1.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
